# src/controllers/Post.Controllers.js
@@ -1,6 +1,5 @@
 import * as service from "../services/Posts.Services.js";
 
-
 export const getPosts = async (req, res, next) => {
 try {
 const data = await service.getAllPosts();
@@ -9,7 +8,6 @@ res.json(data);
 next(err);
 }
 };
-
 
 export const getPostById = async (req, res, next) => {
 try {
@@ -25,7 +23,6 @@ next(err);
 }
 };
 
-
 export const getPostsByAuthor = async (req, res, next) => {
 try {
 const data = await service.getPostsByAuthor(req.params.authorId);
@@ -35,26 +32,39 @@ next(err);
 }
 };
 
-
 export const createPost = async (req, res, next) => {
 try {
-const { title, content, author_id } = req.body;
+const { title, content, authorId } = req.body;
 
-if (!title || !content || !author_id) {
+if (!title || !content || !authorId) {
 return res.status(400).json({ error: "Missing fields" });
 }
 
-const data = await service.createPost(req.body);
+const data = await service.createPost({
+title,
+content,
+author_id: authorId, 
+});
+
 res.status(201).json(data);
 } catch (err) {
 next(err);
 }
 };
 
-
 export const updatePost = async (req, res, next) => {
 try {
-const data = await service.updatePost(req.params.id, req.body);
+const { title, content, authorId } = req.body;
+
+if (!title || !content || !authorId) {
+return res.status(400).json({ error: "Missing fields" });
+}
+
+const data = await service.updatePost(req.params.id, {
+title,
+content,
+author_id: authorId,
+});
 
 if (!data) {
 return res.status(404).json({ error: "Post not found" });
@@ -65,7 +75,6 @@ res.json(data);
 next(err);
 }
 };
-
 
 export const deletePost = async (req, res, next) => {
 try {
